# libcsp_rust

./: .gitignore  .gitmodules  Cargo.toml  LOGGING.md  README.md  USAGE.md  USAGE_STRESS.md  build.rs  csp_debug_wrapper.c
.github/workflows/: ci.yml
docs/development/: COMPLETE_TEST_ANALYSIS.md  CSP_PORT_ARCHITECTURE.md  EXPORT_ARCH_GUIDE.md  EXPORT_ARCH_SIMPLE.md  FINAL_TEST_STATUS.md  PLAN.md  TEST_FINAL_SUMMARY.md  TEST_IMPROVEMENTS_FINAL_REPORT.md
embassy-example/: .gitignore  Cargo.toml  Makefile  README.md  memory.x
embassy-example/.cargo/: config.toml
embassy-example/src/: lib.rs  main.rs  queue.rs
examples/: custom_arch.rs  custom_transport.rs  loopback.rs  rust_socketcan_iface.rs  server_dispatcher.rs  sniffer.rs  stress_rx.rs  stress_tx.rs
examples/custom_arch_external/: Cargo.toml
examples/custom_arch_external/src/: main.rs
examples/stress/: mod.rs
libcsp-sys/: sscanf_wrapper.c
src/: arch.rs  arch_tests.rs  can.rs  connection.rs  consts.rs  debug.rs  error.rs  ffi_util.rs  init.rs  interface.rs  lib.rs  packet.rs  peek_poke.rs  promisc.rs  route.rs  service.rs  socket.rs  sys.rs
src/arch/: ropi_rwpi.S  test_arch.rs
tests/: comprehensive.rs  csp_tests.rs  edge_cases.rs  ident_validation.rs  upstream_parity.rs  usage.rs
