[package]
name = "libcsp"
version = "1.6.0"
edition = "2021"
description = "Safe Rust bindings for libcsp (Cubesat Space Protocol) v1.6"
license = "LGPL-2.1"
links = "csp"

[features]
default = ["std", "rdp", "crc32", "hmac", "xtea", "qos", "promisc", "dedup"]

# Pull in the standard library. Disable to build for no_std targets.
# When disabled you still need `alloc` (for CString / heap-allocated strings
# in CspConfig). The CSP buffer pool itself never calls the Rust allocator.
std = []

# Security / protocol features
rdp           = []   # Reliable Datagram Protocol
rdp-fast-close = ["rdp"]  # Fast close of RDP connections
crc32         = []   # CRC32 checksum
hmac          = []   # HMAC-SHA1 authentication
xtea          = []   # XTEA encryption

# Routing / QoS
qos           = []   # Quality of Service (priority FIFOs)
promisc       = []   # Promiscuous mode
dedup         = []   # Packet deduplication
cidr-rtable   = []   # CIDR routing table (instead of static)

# Drivers / interfaces (optional external dependencies)
socketcan     = []   # Linux SocketCAN driver (requires libsocketcan)
zmq           = []   # ZMQ hub interface (requires libzmq)
usart-linux   = []   # Linux USART driver
usart-windows = []   # Windows USART driver

# Debug
debug         = []   # Enable CSP debug output
debug-timestamp = [] # Add timestamps to debug output

# Custom Architecture Support
# Enable this to provide your own implementation of OS primitives (mutex, queue, clock)
# from outside this crate.
external-arch = []

# ROPI-RWPI ARM support: the export_arch! macro emits *_impl-suffixed symbols for the
# functions that touch Rust statics (malloc, free, calloc, queue_create, get_ms).
# The crate compiles an assembly file that provides the public csp_* names as
# R9-saving trampolines that reload __data_start before calling the *_impl variant.
ropi-rwpi = []

[dependencies]
bitflags = "2"
spin = "0.9"

# Note: We don't use tinyrlibc because it exports symbols with no_mangle when features are enabled,
# causing conflicts with our export_arch! macro. Instead, we implement the simple functions ourselves.

# libc is used by test_arch on host platforms (Linux, macOS, Windows)
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
libc = "0.2"

[dev-dependencies]
socketcan = "3.3"
anyhow = "1.0"
libc = "0.2"

[build-dependencies]
cc = "1"
bindgen = "0.70"

# Examples that require specific features
[[example]]
name = "stress_tx"
required-features = ["socketcan"]

[[example]]
name = "stress_rx"
required-features = ["socketcan"]

[[example]]
name = "rust_socketcan_iface"
required-features = ["socketcan"]
