[package]
name = "embassy-example"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Forwarding feature: when enabled, also enables `libcsp/ropi-rwpi`. The
# `libcsp::export_arch!` macro emits `#[cfg(feature = "ropi-rwpi")]` arms in
# its expansion, so any crate calling the macro must declare a `ropi-rwpi`
# feature locally to avoid `unexpected_cfgs` lint warnings.
ropi-rwpi = ["libcsp/ropi-rwpi"]

[dependencies]
embassy-stm32 = { version = "0.1", features = ["stm32l4r5zi", "unstable-pac", "memory-x", "time-driver-any"] }
embassy-executor = { version = "0.5", features = ["arch-cortex-m", "executor-thread", "task-arena-size-4096"] }
embassy-time = { version = "0.3", features = ["tick-hz-32_768"] }
embassy-sync = { version = "0.6" }
embassy-futures = { version = "0.1" }

cortex-m = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"
rtt-target = "0.5"
static_cell = "2.1"
panic-probe = "0.3"

embedded-alloc = "0.5"
libcsp = { path = "..", default-features = false, features = ["external-arch", "rdp"] }

[profile.release]
debug = 2
lto = true
opt-level = 's'
